--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
+    "lint": "tslint --project tsconfig.lint.json",
     "test": "jest",
     "dev": "tsc --watch",
     "build": "tsc",
@@ -31,6 +32,8 @@
     "jest": "^24.5.0",
     "rimraf": "^2.6.3",
     "ts-jest": "^24.0.0",
+    "tslint": "^5.14.0",
+    "tslint-config-standard": "^8.0.1",
     "typescript": "^3.3.4000"
   },
   "files": [
