--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "prepare": "npm run clean && npm run build",
     "postversion": "git push --follow-tags"
   },
+  "dependencies": {
+    "escape-string-regexp": "^2.0.0"
+  },
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "jest": "^24.5.0",
