--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "lint": "tslint --project tsconfig.lint.json",
+    "lint": "eslint --ignore-path ./.gitignore .",
     "test": "jest",
     "dev": "tsc --watch",
     "build": "tsc",
@@ -30,12 +30,17 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "eslint": "^7.3.1",
+    "eslint-config-standard-with-typescript": "^18.0.2",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.1.0",
     "rimraf": "^3.0.0",
     "ts-jest": "^25.0.0",
-    "tslint": "^5.14.0",
-    "tslint-config-standard": "^9.0.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.9.5"
   },
   "files": [
     "lib/**/*",
